style.css
* {
    /* This border will cause a slight scroll bar to appear 
    but will be removed when this is commented out. */
    border: 1px solid red;

    margin:0px;
    padding:0px;
    box-sizing:border-box;
}

.container {
    height:100vh;
    display:grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 3fr 4fr;
}

.sidebar {
    grid-row:1/4;
    background-color: #facc15;
    display:grid;
    grid-template-rows: 1fr 3fr 4fr;
    padding:1rem;
    font-size:1.4rem;
}

side-content-1 {
    display:flex;
    justify-content: center;
}
.header {
    grid-column: 2/3;

}

.content {
    grid-column: 2/3;
    grid-row:2/4;
    gap:20px;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows:1fr 1fr;
    background-color: #fde68a;
}

.projects {
    grid-column: 1/1;
    grid-row:1/3;
}

li {
    list-style:none;
    margin-bottom:1rem;
}

ul > li {
    display:flex;
    align-items:center;
}

li > svg {
    height:1.4rem;
    margin-right:4px;
}

svg {
    height:2rem;
}

.sidebar-title {
    display:flex;
}

/* .sidebar.title > svg{
    height: 1.4rem;
    margin-right:8px;
}
.sidebar.title > h1 {
    display:flex;
    align-items:center;
} */

